@@ -1,6 +1,7 @@
-/* -*- Mode:C++; c-file-style:"gnu"; indent-tabs-mode:nil; -*- */
+/* -*-  Mode: C++; c-file-style: "gnu"; indent-tabs-mode:nil; -*- */
 /*
  * Copyright (c) 2007 INRIA
+ * Copyright (c) 2011 The Boeing Company
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -15,9 +16,9 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * Author: Mathieu Lacage <mathieu.lacage@sophia.inria.fr>
  */
-#include "mac64-address.h"
+
+#include "mac16-address.h"
 #include "ns3/address.h"
 #include "ns3/assert.h"
 #include "ns3/log.h"
@@ -25,11 +26,11 @@
 #include <iostream>
 #include <cstring>
 
-NS_LOG_COMPONENT_DEFINE ("Mac64Address");
+NS_LOG_COMPONENT_DEFINE ("Mac16Address");
 
 namespace ns3 {
 
-ATTRIBUTE_HELPER_CPP (Mac64Address);
+ATTRIBUTE_HELPER_CPP (Mac16Address);
 
 #define ASCII_a (0x41)
 #define ASCII_z (0x5a)
@@ -41,7 +42,6 @@ ATTRIBUTE_HELPER_CPP (Mac64Address);
 static char
 AsciiToLowCase (char c)
 {
-  NS_LOG_FUNCTION (c);
   if (c >= ASCII_a && c <= ASCII_z) {
       return c;
     } else if (c >= ASCII_A && c <= ASCII_Z) {
@@ -52,19 +52,20 @@ AsciiToLowCase (char c)
 }
 
 
-Mac64Address::Mac64Address ()
+Mac16Address::Mac16Address ()
 {
   NS_LOG_FUNCTION (this);
-  std::memset (m_address, 0, 8);
+  memset (m_address, 0, 2);
 }
-Mac64Address::Mac64Address (const char *str)
+
+Mac16Address::Mac16Address (const char *str)
 {
   NS_LOG_FUNCTION (this << str);
   int i = 0;
-  while (*str != 0 && i < 8) 
+  while (*str != 0 && i < 2)
     {
       uint8_t byte = 0;
-      while (*str != ASCII_COLON && *str != 0) 
+      while (*str != ASCII_COLON && *str != 0)
         {
           byte <<= 4;
           char low = AsciiToLowCase (*str);
@@ -80,92 +81,89 @@ Mac64Address::Mac64Address (const char *str)
         }
       m_address[i] = byte;
       i++;
-      if (*str == 0) 
+      if (*str == 0)
         {
           break;
         }
       str++;
     }
-  NS_ASSERT (i == 8);
-}
-void 
-Mac64Address::CopyFrom (const uint8_t buffer[8])
-{
-  NS_LOG_FUNCTION (this << &buffer);
-  std::memcpy (m_address, buffer, 8);
-}
-void 
-Mac64Address::CopyTo (uint8_t buffer[8]) const
-{
-  NS_LOG_FUNCTION (this << &buffer);
-  std::memcpy (buffer, m_address, 8);
+  NS_ASSERT (i == 2);
 }
 
-bool 
-Mac64Address::IsMatchingType (const Address &address)
+void
+Mac16Address::CopyFrom (const uint8_t buffer[2])
+{
+  NS_LOG_FUNCTION (this << &buffer);
+  memcpy (m_address, buffer, 2);
+}
+void
+Mac16Address::CopyTo (uint8_t buffer[2]) const
+{
+  NS_LOG_FUNCTION (this << &buffer);
+  memcpy (buffer, m_address, 2);
+}
+
+bool
+Mac16Address::IsMatchingType (const Address &address)
 {
   NS_LOG_FUNCTION (&address);
-  return address.CheckCompatible (GetType (), 8);
+  return address.CheckCompatible (GetType (), 2);
 }
-Mac64Address::operator Address () const
+
+Mac16Address::operator Address () const
 {
   return ConvertTo ();
 }
-Mac64Address 
-Mac64Address::ConvertFrom (const Address &address)
+
+Mac16Address
+Mac16Address::ConvertFrom (const Address &address)
 {
   NS_LOG_FUNCTION (address);
-  NS_ASSERT (address.CheckCompatible (GetType (), 8));
-  Mac64Address retval;
+  NS_ASSERT (address.CheckCompatible (GetType (), 2));
+  Mac16Address retval;
   address.CopyTo (retval.m_address);
   return retval;
 }
-
 Address
-Mac64Address::ConvertTo (void) const
+Mac16Address::ConvertTo (void) const
 {
   NS_LOG_FUNCTION (this);
-  return Address (GetType (), m_address, 8);
+  return Address (GetType (), m_address, 2);
 }
 
-Mac64Address 
-Mac64Address::Allocate (void)
+Mac16Address
+Mac16Address::Allocate (void)
 {
   NS_LOG_FUNCTION_NOARGS ();
   static uint64_t id = 0;
   id++;
-  Mac64Address address;
-  address.m_address[0] = (id >> 56) & 0xff;
-  address.m_address[1] = (id >> 48) & 0xff;
-  address.m_address[2] = (id >> 40) & 0xff;
-  address.m_address[3] = (id >> 32) & 0xff;
-  address.m_address[4] = (id >> 24) & 0xff;
-  address.m_address[5] = (id >> 16) & 0xff;
-  address.m_address[6] = (id >> 8) & 0xff;
-  address.m_address[7] = (id >> 0) & 0xff;
+  Mac16Address address;
+  address.m_address[0] = (id >> 8) & 0xff;
+  address.m_address[1] = (id >> 0) & 0xff;
   return address;
 }
-uint8_t 
-Mac64Address::GetType (void)
+
+uint8_t
+Mac16Address::GetType (void)
 {
   NS_LOG_FUNCTION_NOARGS ();
   static uint8_t type = Address::Register ();
   return type;
 }
 
-std::ostream& operator<< (std::ostream& os, const Mac64Address & address)
+std::ostream & operator<< (std::ostream& os, const Mac16Address & address)
 {
-  uint8_t ad[8];
+  uint8_t ad[2];
   address.CopyTo (ad);
 
   os.setf (std::ios::hex, std::ios::basefield);
   os.fill ('0');
-  for (uint8_t i=0; i < 7; i++) 
+  for (uint8_t i = 0; i < 1; i++)
     {
       os << std::setw (2) << (uint32_t)ad[i] << ":";
     }
   // Final byte not suffixed by ":"
-  os << std::setw (2) << (uint32_t)ad[7];
+  os << std::setw (2) << (uint32_t)ad[1];
   os.setf (std::ios::dec, std::ios::basefield);
   os.fill (' ');
   return os;
@@ -182,13 +180,13 @@ AsInt (std::string v)
   return retval;
 }
 
-std::istream& operator>> (std::istream& is, Mac64Address & address)
+std::istream& operator>> (std::istream& is, Mac16Address & address)
 {
   std::string v;
   is >> v;
 
   std::string::size_type col = 0;
-  for (uint8_t i = 0; i < 8; ++i)
+  for (uint8_t i = 0; i < 2; ++i)
     {
       std::string tmp;
       std::string::size_type next;
@@ -209,4 +207,4 @@ std::istream& operator>> (std::istream& is, Mac64Address & address)
   return is;
 }
 
-} // namespace ns3
+}
